[package]
name = "wiki-path-rs"
version = "0.1.0"
authors = ["lokmeinmatz <matze.kind@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
handlebars = "*"
serde = {version = "1.0.105", features = ["derive"]}
serde_json = "1.0.48"
log = "0.4.8"
simplelog = "0.7.4"
rusqlite = {version = "0.21.0", features = ["bundled"]}
once_cell = "1.3.1"
reqwest = {version = "0.10.4", features = ["blocking"]}
regex = "1"